<resources>
    <string name="app_name">The Games DB</string>
    <string name="Search">Search</string>
    <string name="go">Go</string>
    <string name="overview">Overview:</string>
    <string name="finish">Finish</string>
    <string name="SimilarGames">Similar Games</string>
    <string name="PlayTrailer">Play Trailer</string>
    <string name="publisher">Publisher:</string>
    <string name="Genre">Genre:</string>
    <string name="finishLast">Finish</string>
</resources>
