<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.first.thegamedb.All">

    <TextView
        android:text="@string/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OverviewTV"
        android:textColor="@color/colorBlack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView" />

    <Button
        android:text="@string/finish"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/finishBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_enable"
        android:textColor="@color/colorWhite"
        android:onClick="onClickF" />

    <Button
        android:text="@string/SimilarGames"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:id="@+id/similagamesBtn"
        android:background="@drawable/button_enable"
        android:layout_above="@+id/finishBtn"
        android:layout_alignLeft="@+id/finishBtn"
        android:layout_alignStart="@+id/finishBtn"
        android:layout_marginBottom="11dp"
        android:textColor="@color/colorWhite"
        android:onClick="onClickS"
        android:visibility="gone"/>


    <TextView
        android:text="@string/Genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/genreTV"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/publisherTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/OverviewTV"
        android:layout_above="@+id/genreTV"
        android:id="@+id/scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linear"/>
    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:id="@+id/progressBar" />

    <ImageView
        android:layout_width="260dp"
        android:layout_height="130dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:id="@+id/publisherTV"
        android:textColor="@color/colorBlack"
        android:layout_above="@+id/similagamesBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
